@@ -16,14 +16,11 @@
 
 package org.springframework.beans.factory.access;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collection;
-
 import junit.framework.TestCase;
 
 import org.springframework.beans.factory.BeanFactory;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
+import org.springframework.util.ClassUtils;
 
 /**
  * @author Colin Sampaleanu
@@ -39,19 +36,10 @@ public class SingletonBeanFactoryLocatorTests extends TestCase {
 	}
 
 	public void testBasicFunctionality() {
-		// test a custom subclass of KeyedSingletonBeanFactoryLocator which overrides
-		// getAllDefinitionResources method, since we can't really supply two files with
-		// the same name in the classpath for this test
-		SingletonBeanFactoryLocator facLoc = new SingletonBeanFactoryLocator() {
-			protected Collection getAllDefinitionResources(String resourceName)
-					throws IOException {
-				ArrayList list = new ArrayList();
-				list.add(getClass().getResource("ref1.xml"));
-				list.add(getClass().getResource("ref2.xml"));
-				return list;
-			}
-		};
-
+		
+		SingletonBeanFactoryLocator facLoc = new SingletonBeanFactoryLocator(
+				"classpath*:" + ClassUtils.addResourcePathToPackagePath(getClass(), "ref1.xml"));
+		
 		BeanFactoryReference bfr = facLoc.useBeanFactory("a.qualified.name.of.some.sort");
 		BeanFactory fac = bfr.getFactory();
 		bfr = facLoc.useBeanFactory("another.qualified.name");
@@ -78,33 +66,4 @@ public class SingletonBeanFactoryLocatorTests extends TestCase {
 		bfr.release();
 	}
 
-	/**
-	 * Now since we overrode getAllDefinitionResources in previous test, verify that
-	 * the class is actually asking for the resource names it should
-	 */
-	public void testBeanRefFileLookup() {
-		SingletonBeanFactoryLocator facLoc = new SingletonBeanFactoryLocator() {
-			protected Collection getAllDefinitionResources(String resourceName) throws IOException {
-				// make sure it asks for "beanRefFactory.xml", but then ignore that
-				assertTrue(resourceName.equals(SingletonBeanFactoryLocator.BEANS_REFS_XML_NAME));
-				ArrayList list = new ArrayList();
-				list.add(getClass().getResource("ref1.xml"));
-				list.add(getClass().getResource("ref2.xml"));
-				return list;
-			}
-		};
-		BeanFactory fac = facLoc.useBeanFactory("a.qualified.name.of.some.sort").getFactory();
-
-		facLoc = new SingletonBeanFactoryLocator("my-bean-refs.xml") {
-			protected Collection getAllDefinitionResources(String resourceName) throws IOException {
-				// make sure it asks for "my-bean-refs.xml", but then ignore that
-				assertTrue(resourceName.equals("my-bean-refs.xml"));
-				ArrayList list = new ArrayList();
-				list.add(getClass().getResource("ref1.xml"));
-				list.add(getClass().getResource("ref2.xml"));
-				return list;
-			}
-		};
-		fac = facLoc.useBeanFactory("a.qualified.name.of.some.sort").getFactory();
-	}
 }
